# qt-app-template

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/cmake-modules/: CMakeConfigApple.cmake  CMakeConfigUnix.cmake
cpp/resources/macOS/: post_build.sh  post_build_codesign.sh
cpp/src/: mainwindow.cpp  myapp.cpp
py/src/: mainwindow.py  myapp.py
